gcc/testsuite/g++.dg/cpp1y/feat-cxx98-neg.C
// { dg-do compile { target c++98_only } }
// { dg-options "-ansi" }

#ifdef __cpp_runtime_arrays
#  error "__cpp_runtime_arrays" // { dg-error "error" }
#endif
